<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    android:backgroundTint="#FF3399"
    tools:context=".QuestionsActivity">

    <TextView
        android:id="@+id/question_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/enter_your_question"
        android:textColor="#9580FF"
        android:textSize="18sp"
        android:textStyle="bold" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="20dp">

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minHeight="50dp"
            android:progress="0"
            android:max="5"
            style="?android:progressBarStyleHorizontal"/>
        <TextView
            android:id="@+id/progress_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/one_by_five"
            android:textSize="20sp"
            android:padding="10dp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/opt1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/question_options"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/option_one"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/opt2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/question_options"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/option_two"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/opt3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/question_options"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/option_three"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/opt4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/question_options"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/option_four"
        android:textSize="18sp" />

    <Button
        android:id="@+id/button_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textStyle="bold"
        android:backgroundTint="#FFD9B3"/>

</LinearLayout>