<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:gravity="center"
    android:background="#C59237"
    android:padding="10dp"
    tools:context=".Result">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="10dp">

            <TextView
                android:id="@+id/congo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/congratulations"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/your_score_is"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:textSize="18sp"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/Score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/four_by_five"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"/>

            <Button
                android:id="@+id/button_finish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/finish"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="#F8F5F5"
                android:textAllCaps="false"
                android:backgroundTint="#FFCDDC39"
                android:layout_marginTop="10dp"/>



        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>